--- a/src/components/SiteFooter.css
+++ b/src/components/SiteFooter.css
@@ -1,9 +1,9 @@
 footer {
+	border-top: 29px solid white;
+
 	padding-top: 80px;
 	padding-left: 51px;
 
-	position: fixed;
-	bottom: 0;
 	/* TODO get real number */
 	height: 147px;
 
